Added authentication through Github and Passport
